@@ -1,7 +1,7 @@
 echo=off
 set ssleay=%1%
 set tmp1=pem.out
-set cmp=perl cmp.pl
+set cmp=perl ..\ms\cmp.pl
 
 call tpem.bat crl ..\test\testcrl.pem
 if errorlevel 1 goto err
@@ -33,4 +33,3 @@ if errorlevel 1 goto err
 echo OK
 del %tmp1%
 :err
-
