@@ -5,10 +5,16 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Comment out two functions in bio.h that aren't implemented. Fix up the
+     Win32 test batch file so it (might) work again. The Win32 test batch file
+     is horrible: I feel ill....
+     [Steve Henson]
+
   *) Move various #ifdefs around so NO_SYSLOG, NO_DIRENT etc are now selected
      in e_os.h. Audit of header files to check ANSI and non ANSI
      sections: 10 functions were absent from non ANSI section and not exported
      from Windows DLLs. Fixed up libeay.num for new functions.
+     [Steve Henson]
 
   *) Make `openssl version' output lines consistent.
      [Ralf S. Engelschall]
@@ -39,6 +45,7 @@
   *) Permit extensions to be added to CRLs using crl_section in openssl.cnf.
      Currently only issuerAltName and AuthorityKeyIdentifier make any sense
      in CRLs.
+     [Steve Henson]
 
   *) Add a useful kludge to allow package maintainers to specify compiler and
      other platforms details on the command line without having to patch the
